--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,7 @@ defaultContentLanguage = 'bg'
 theme = 'PaperMod'
 
 [outputs]
-home = [ "HTML", "RSS", "JSON" ]
+home = [ 'HTML', 'RSS', 'JSON' ]
 
 [languages]
   [languages.bg]
@@ -53,11 +53,10 @@ showtoc = false
   hiddenInSingle = true
 
   [params.fuseOpts]
-  isCaseSensitive = false
-  shouldSort = true
-  location = 0
-  distance = 1_000
-  threshold = 0.4
-  minMatchCharLength = 0
-  limit = 10
-  keys = [ "title", "permalink", "summary", "content" ]
+    isCaseSensitive = false
+    shouldSort = true
+    location = 0
+    distance = 1_000
+    threshold = 0.4
+    minMatchCharLength = 0
+    keys = [ "title", "permalink", "summary", "content" ]
