feat: add articles

--- a/hugo.toml
+++ b/hugo.toml
@@ -60,4 +60,4 @@ showtoc = false
     distance = 1_000
     threshold = 0.4
     minMatchCharLength = 0
-    keys = [ "title", "permalink", "summary", "content" ]
+    keys = [ "title", "permalink", "summary", "content", "tag" ]
